[package]
name = "snapctl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/GReX-Telescope/snapctl"
description = "A command line tool for configuring and monitoring the SNAP FPGA board"
homepage = "https://github.com/GReX-Telescope/snapctl"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
katcp = "0.1"
katcp_casper = { path = "katcp_casper"}
clap = { version = "3", features = ["derive"] }
packed_struct = "0.10"
mac_address = "1.1.3"

[workspace]
members = ["katcp_casper"]

